Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13153

Function llapi_get_version_string fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.14.0
    • Lustre 2.12.3
    • None
    • 3
    • 9223372036854775807

    Description

      The llapi function llapi_get_version_string always (AFAICT) fails with ENOENT because it passes the argument to get_lustre_param_value in the wrong order.
      I should add that this function is used in jt_get_version that has a fallback to LUSTRE_VERSION_STRING which might have shadowed the error.

      I'm attaching a simple patch.

      Attachments

        Activity

          People

            neilb Neil Brown (Inactive)
            barthelemy Clément Barthelemy (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: